2009-06-10 Harald Oehlmann  <oehhar@users.sourceforge.net>

	* arrow.tcl initialised set _grab(oldstate) to "normal" to avoid
	error when there is a ArrowButton::_leave without corresponding
	ArrowButton::_enter [Bug 2762361]
	
	* entry.tcl (Entry::_path_command) Add "invoke" to the list of
	internally handled commands
	[Bug 2340320] (patch by relaxmike@users.sourceforge.net)
	
	* uitils.tcl (BWidget::place) BWidget::place used screen width
	instead window width.
	[Bug 1842346] (patch by Niels Gollesch ngoelles@users.sourceforge.net)
	
	* listbox.tcl (ListBox::_redraw_selection) Added check if redrawn
	item is on the to-delete list and thus does not exist any more as
	BWidget. [Bug 1752755] (legolas_a20@users.sourceforge.net]

2008-10-30  Jeff Hobbs  <jeffh@ActiveState.com>

	* tree.tcl (Tree::_node_name_rev): Return node names as they are
	input, and properly handle :: in node names.  This changes
	internal node name reps, but should be transparent to the user,
	except for the result of [insert].

2008-05-26  Jeff Hobbs  <jeffh@ActiveState.com>

	* tree.tcl (Tree::_redraw_selection):       do not allow empty
	* listbox.tcl (ListBox::_redraw_selection): fill color as that
	creates a transparent item that doesn't return a bbox.  This
	showed up on OS X/Aqua, where the listbox selectforeground
	defaults to empty. [AS Bug 77186 74923]

2007-10-31  Jeff Hobbs  <jeffh@ActiveState.com>

	* lang/nl.rc (new): Dutch translation [Bug 1804469]

	* lang/hu.rc (new): Hungarian translation [Bug 1821842]

	* tree.tcl (Tree::insert): do node_name on parent arg [Bug 1046955]

	* listbox.tcl: speed up ListBox insertion significantly. [Bug 1472443]

2007-05-11  Jeff Hobbs  <jeffh@ActiveState.com>

	* widget.tcl (Widget::theme): make sure Tk 8.5a6 is recognized as
	having the themed widgets

2006-12-20  J. Tang  <tang@jtang.org>

	* util.tcl: fixed BWidget::write for widgets that require
	DynamicHelp.  [bug 1518803]

2006-12-05  Andreas Kupries <andreask@activestate.com>
