@@ -32,23 +32,27 @@
 <TD>&nbsp;&nbsp;<A HREF="#-bitmap">-bitmap</A></TR>
 </TR>
 <TR>
+
+<TD>&nbsp;&nbsp;<A HREF="#-buttonwidth">-buttonwidth</A></TR>
 <TD>&nbsp;&nbsp;<A HREF="#-cancel">-cancel</A></TR>
+</TR>
+<TR>
 <TD>&nbsp;&nbsp;<A HREF="#-default">-default</A></TR>
-</TR>
-<TR>
 <TD>&nbsp;&nbsp;<A HREF="#-image">-image</A></TR>
+</TR>
+<TR>
 <TD>&nbsp;&nbsp;<A HREF="#-modal">-modal</A></TR>
-</TR>
-<TR>
 <TD>&nbsp;&nbsp;<A HREF="#-parent">-parent</A></TR>
+</TR>
+<TR>
 <TD>&nbsp;&nbsp;<A HREF="#-place">-place</A></TR>
-</TR>
-<TR>
 <TD>&nbsp;&nbsp;<A HREF="#-separator">-separator</A></TR>
-<TD>&nbsp;&nbsp;<A HREF="#-side">-side</A></TR>
 </TR>
 <TR>
+<TD>&nbsp;&nbsp;<A HREF="#-side">-side</A></TR>
 <TD>&nbsp;&nbsp;<A HREF="#-title">-title</A></TR>
+</TR>
+<TR>
 <TD>&nbsp;&nbsp;<A HREF="#-transient">-transient</A></TR>
 </TR>
 </TABLE></DD>
@@ -132,6 +136,13 @@ If <B>side</B> option is set to <I>left</I> or <I>right</I>,
 
 Specifies a bitmap to display at the left of the user frame.
 <B>image</B> option override <B>bitmap</B>.
+</DD>
+</DL>
+<DL><DT><A NAME="-buttonwidth"><B>-buttonwidth (read-only)</B></A></DT>
+<DD>
+
+Specifies the width of the buttons as specified for the option <B>width</B>
+of the <B>button</b> widget.
 </DD>
 </DL>
 <DL><DT><A NAME="-cancel"><B>-cancel</B></A></DT>
